--- a/.github/workflows/telegram_cron.yml
+++ b/.github/workflows/telegram_cron.yml
@@ -2,7 +2,8 @@ name: Telegram Cron Job
 
 on:
   schedule:
-    - cron: "*/1 * * * *"  # Ejecutar cada minuto
+    #- cron: "*/1 * * * *"  # Ejecutar cada minuto
+    - cron: "0 0 * * *"  # Apagado
   workflow_dispatch:  # Permite ejecución manual
 
 jobs:
